# ChangeLog for media-plugins/gst-plugins-esd
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-plugins/gst-plugins-esd/ChangeLog,v 1.105 2008/02/21 12:00:30 zaheerm Exp $

*gst-plugins-esd-0.10.7 (21 Feb 2008)

  21 Feb 2008; Zaheer Abbas Merali <zaheerm@gentoo.org>
  +gst-plugins-esd-0.10.7.ebuild:
  version bump

  01 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-esd-0.10.6.ebuild:
  sparc stable wrt #190900, thanks to Alex Maclean for testing

  11 Oct 2007; Markus Rothe <corsair@gentoo.org>
  gst-plugins-esd-0.10.6.ebuild:
  Stable on ppc64; bug #190900

  26 Sep 2007; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-esd-0.10.6.ebuild:
  alpha/ia64 stable wrt #190900

  21 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  gst-plugins-esd-0.10.6.ebuild:
  Stable on amd64 wrt bug #190900.

  10 Sep 2007; nixnut <nixnut@gentoo.org> gst-plugins-esd-0.10.6.ebuild:
  Stable on ppc wrt bug 190900

  09 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  gst-plugins-esd-0.10.6.ebuild:
  x86 stable, bug 190900

  03 Sep 2007; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-esd-0.10.6.ebuild:
  Stable for HPPA (bug #190900).

*gst-plugins-esd-0.10.6 (30 Aug 2007)

  30 Aug 2007; Samuli Suominen <drac@gentoo.org>
  +gst-plugins-esd-0.10.6.ebuild:
  Version bump.

  26 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  gst-plugins-esd-0.10.5.ebuild:
  Stable on sparc

  28 Jun 2007; Joseph Jezak <josejx@gentoo.org>
  gst-plugins-esd-0.10.3.ebuild:
  Marked ppc stable for bug #163541.

  16 Feb 2007; Roy Marples <uberlord@gentoo.org>
  gst-plugins-esd-0.10.5.ebuild:
  Added ~x86-fbsd keyword.

  12 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  gst-plugins-esd-0.10.3.ebuild:
  stable x86; bug 163541

  31 Jan 2007; Markus Rothe <corsair@gentoo.org>
  gst-plugins-esd-0.10.3.ebuild:
  Stable on ppc64; bug #163541

  30 Jan 2007; Jeroen Roovers <jer@gentoo.org>