@@ -1,15 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-plugins/gst-plugins-esd/gst-plugins-esd-0.10.7.ebuild,v 1.1 2008/02/21 12:00:30 zaheerm Exp $
-
-EAPI="prefix"
-
-inherit gst-plugins-good
-
-KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux"
-IUSE=""
-
-RDEPEND=">=media-sound/esound-0.2.8
-	>=media-libs/gstreamer-0.10.17
-	>=media-libs/gst-plugins-base-0.10.17"
-DEPEND="${RDEPEND}"
