@@ -1,6 +1,13 @@
 # ChangeLog for media-plugins/gst-plugins-esd
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/media-plugins/gst-plugins-esd/ChangeLog,v 1.105 2008/02/21 12:00:30 zaheerm Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-esd/ChangeLog,v 1.106 2008/06/29 15:50:46 drac Exp $
+
+*gst-plugins-esd-0.10.8 (29 Jun 2008)
+
+  29 Jun 2008; Samuli Suominen <drac@gentoo.org>
+  -gst-plugins-esd-0.10.3.ebuild, -gst-plugins-esd-0.10.5.ebuild,
+  -gst-plugins-esd-0.10.7.ebuild, +gst-plugins-esd-0.10.8.ebuild:
+  Version bump.
 
 *gst-plugins-esd-0.10.7 (21 Feb 2008)
 
